--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,24 +27,24 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.activation-1.1.1.jar=../lib/activation-1.1.1.jar
-file.reference.commons-codec-1.5.jar=../lib/commons-codec-1.5.jar
-file.reference.commons-logging-1.2.jar=../lib/commons-logging-1.2.jar
-file.reference.dom4j-1.6.1.jar=../lib/dom4j-1.6.1.jar
-file.reference.fluent-hc-4.5.5.jar=../lib/fluent-hc-4.5.5.jar
-file.reference.gson-2.8.2.jar=../lib/gson-2.8.2.jar
-file.reference.httpclient-4.5.5.jar=../lib/httpclient-4.5.5.jar
-file.reference.httpcore-4.4.9.jar=../lib/httpcore-4.4.9.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=../lib/jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=../lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.javax.mail.jar=../lib/javax.mail.jar
-file.reference.mssql-jdbc-10.2.2.jre17.jar=../lib/mssql-jdbc-10.2.2.jre17.jar
-file.reference.poi-3.8-beta4.jar=../lib/poi-3.8-beta4.jar
-file.reference.poi-ooxml-3.8-beta4.jar=../lib/poi-ooxml-3.8-beta4.jar
-file.reference.poi-ooxml-schemas-3.8-beta4.jar=../lib/poi-ooxml-schemas-3.8-beta4.jar
-file.reference.stax-api-1.0.1.jar=../lib/stax-api-1.0.1.jar
-file.reference.xml-apis-1.0.b2.jar=../lib/xml-apis-1.0.b2.jar
-file.reference.xmlbeans-2.3.0.jar=../lib/xmlbeans-2.3.0.jar
+file.reference.activation-1.1.1.jar=D:\\shopphonegr4\\lib\\activation-1.1.1.jar
+file.reference.commons-codec-1.5.jar=D:\\shopphonegr4\\lib\\commons-codec-1.5.jar
+file.reference.commons-logging-1.2.jar=D:\\shopphonegr4\\lib\\commons-logging-1.2.jar
+file.reference.dom4j-1.6.1.jar=D:\\shopphonegr4\\lib\\dom4j-1.6.1.jar
+file.reference.fluent-hc-4.5.5.jar=D:\\shopphonegr4\\lib\\fluent-hc-4.5.5.jar
+file.reference.gson-2.8.2.jar=D:\\shopphonegr4\\lib\\gson-2.8.2.jar
+file.reference.httpclient-4.5.5.jar=D:\\shopphonegr4\\lib\\httpclient-4.5.5.jar
+file.reference.httpcore-4.4.9.jar=D:\\shopphonegr4\\lib\\httpcore-4.4.9.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\shopphonegr4\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\shopphonegr4\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail.jar=D:\\shopphonegr4\\lib\\javax.mail.jar
+file.reference.mssql-jdbc-10.2.2.jre17.jar=D:\\shopphonegr4\\lib\\mssql-jdbc-10.2.2.jre17.jar
+file.reference.poi-3.8-beta4.jar=D:\\shopphonegr4\\lib\\poi-3.8-beta4.jar
+file.reference.poi-ooxml-3.8-beta4.jar=D:\\shopphonegr4\\lib\\poi-ooxml-3.8-beta4.jar
+file.reference.poi-ooxml-schemas-3.8-beta4.jar=D:\\shopphonegr4\\lib\\poi-ooxml-schemas-3.8-beta4.jar
+file.reference.stax-api-1.0.1.jar=D:\\shopphonegr4\\lib\\stax-api-1.0.1.jar
+file.reference.xml-apis-1.0.b2.jar=D:\\shopphonegr4\\lib\\xml-apis-1.0.b2.jar
+file.reference.xmlbeans-2.3.0.jar=D:\\shopphonegr4\\lib\\xmlbeans-2.3.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
